--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,66 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  /* Colors must be in HSL format */
+  --color-primary-100: 198deg 93% 60%;
+  --color-primary-200: 198deg 93% 60%;
+  --color-primary-300: 198deg 93% 60%;
+  --color-primary-400: 198deg 93% 60%;
+  --color-primary-500: 198deg 93% 60%;
+  --color-primary-600: 198deg 93% 60%;
+  --color-primary-700: 198deg 93% 60%;
+  --color-primary-800: 198deg 93% 60%;
+  --color-primary-900: 198deg 93% 60%;
+
+  --color-secondary-100: 198deg 93% 60%;
+  --color-secondary-200: 198deg 93% 60%;
+  --color-secondary-300: 198deg 93% 60%;
+  --color-secondary-400: 198deg 93% 60%;
+  --color-secondary-500: 198deg 93% 60%;
+  --color-secondary-600: 198deg 93% 60%;
+  --color-secondary-700: 198deg 93% 60%;
+  --color-secondary-800: 198deg 93% 60%;
+  --color-secondary-900: 198deg 93% 60%;
+
+  --color-tertiary-100: 0deg 0% 97%;
+  --color-tertiary-200: 0deg 0% 85%;
+  --color-tertiary-300: 0deg 0% 74%;
+  --color-tertiary-400: 0deg 0% 57%;
+  --color-tertiary-500: 0deg 0% 44%;
+  --color-tertiary-600: 0deg 0% 33%;
+  --color-tertiary-700: 0deg 0% 22%;
+  --color-tertiary-800: 0deg 0% 14%;
+  --color-tertiary-900: 0deg 0% 8%;
+
+  --color-dark-primary-100: 198deg 93% 60%;
+  --color-dark-primary-200: 198deg 93% 60%;
+  --color-dark-primary-300: 198deg 93% 60%;
+  --color-dark-primary-400: 198deg 93% 60%;
+  --color-dark-primary-500: 198deg 93% 60%;
+  --color-dark-primary-600: 198deg 93% 60%;
+  --color-dark-primary-700: 198deg 93% 60%;
+  --color-dark-primary-800: 198deg 93% 60%;
+  --color-dark-primary-900: 198deg 93% 60%;
+
+  --color-dark-secondary-100: 198deg 93% 60%;
+  --color-dark-secondary-200: 198deg 93% 60%;
+  --color-dark-secondary-300: 198deg 93% 60%;
+  --color-dark-secondary-400: 198deg 93% 60%;
+  --color-dark-secondary-500: 198deg 93% 60%;
+  --color-dark-secondary-600: 198deg 93% 60%;
+  --color-dark-secondary-700: 198deg 93% 60%;
+  --color-dark-secondary-800: 198deg 93% 60%;
+  --color-dark-secondary-900: 198deg 93% 60%;
+
+  --color-dark-tertiary-100: 198deg 93% 60%;
+  --color-dark-tertiary-200: 198deg 93% 60%;
+  --color-dark-tertiary-300: 198deg 93% 60%;
+  --color-dark-tertiary-400: 198deg 93% 60%;
+  --color-dark-tertiary-500: 198deg 93% 60%;
+  --color-dark-tertiary-600: 198deg 93% 60%;
+  --color-dark-tertiary-700: 198deg 93% 60%;
+  --color-dark-tertiary-800: 198deg 93% 60%;
+  --color-dark-tertiary-900: 198deg 93% 60%;
+}
