--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -312,3 +312,37 @@
     height: 0;
   }
 }
+
+.DialogOverlay {
+  animation: overlayShow 300ms cubic-bezier(0.16, 1, 0.3, 1) forwards;
+}
+
+.DialogContent {
+  animation: contentShow 300ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+@keyframes overlayShow {
+  from {
+    opacity: 0;
+    backdrop-filter: blur(0);
+    background-color: rgba(0, 0, 0, 0);
+  }
+  to {
+    opacity: 1;
+    backdrop-filter: blur(50px);
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+}
+
+@keyframes contentShow {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -48%) scale(0.96);
+    filter: blur(20px);
+  }
+  to {
+    opacity: 1;
+    filter: blur(0);
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
