Updated landing page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,17 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 :root {
   /* Colors must be in HSL format */
-  --color-primary-100: 198deg 93% 60%;
-  --color-primary-200: 198deg 93% 60%;
-  --color-primary-300: 198deg 93% 60%;
-  --color-primary-400: 198deg 93% 60%;
-  --color-primary-500: 198deg 93% 60%;
-  --color-primary-600: 198deg 93% 60%;
-  --color-primary-700: 198deg 93% 60%;
-  --color-primary-800: 198deg 93% 60%;
-  --color-primary-900: 198deg 93% 60%;
+  --color-primary-100: 270deg 50% 99%;
+  --color-primary-200: 260deg 39% 95%;
+  --color-primary-300: 261deg 42% 88%;
+  --color-primary-400: 258deg 46% 78%;
+  --color-primary-500: 269deg 53% 68%;
+  --color-primary-600: 259deg 60% 64%;
+  --color-primary-700: 260deg 66% 58%;
+  --color-primary-800: 259deg 72% 52%;
+  --color-primary-900: 259deg 76% 43%;
 
   --color-secondary-100: 198deg 93% 60%;
   --color-secondary-200: 198deg 93% 60%;
@@ -63,6 +65,8 @@
   --color-dark-tertiary-700: 198deg 93% 60%;
   --color-dark-tertiary-800: 198deg 93% 60%;
   --color-dark-tertiary-900: 198deg 93% 60%;
+
+  --primary-font: "Roboto", sans-serif;
 
   --separator-border: #919191; /* same as --color-thertiary-400 */
   --focus-border: #007fd4;
