--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -384,3 +384,40 @@ body {
 .toast-leave {
   animation: toastSlideOut 0.3s ease-in-out forwards;
 }
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #929292 #232323;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background-color: #232323;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #232323;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #373737;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background-color: #373737;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #707070;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #707070;
+}
