--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -385,154 +385,7 @@ body {
   animation: toastSlideOut 0.3s ease-in-out forwards;
 }
 
-/* Firefox */
-* {
-  scrollbar-width: thin;
-  scrollbar-color: #929292 #232323;
-}
+@import url("./scrollbar.css");
 
-/* Chrome, Edge and Safari */
-*::-webkit-scrollbar {
-  width: 8px;
-}
-
-*::-webkit-scrollbar-track {
-  border-radius: 0px;
-  background-color: #232323;
-}
-
-*::-webkit-scrollbar-track:hover {
-  background-color: #232323;
-}
-
-*::-webkit-scrollbar-track:active {
-  background-color: #373737;
-}
-
-*::-webkit-scrollbar-thumb {
-  border-radius: 2px;
-  background-color: #373737;
-}
-
-*::-webkit-scrollbar-thumb:hover {
-  background-color: #707070;
-}
-
-*::-webkit-scrollbar-thumb:active {
-  background-color: #707070;
-}
-
-/* editor js styles */
-
-.codex-editor::selection,
-.codex-editor *::selection {
-  background-color: hsl(var(--color-tertiary-600));
-}
-
-.codex-editor * {
-  border-radius: 8px;
-  transition: all 0.175s ease-in-out;
-  color: hsl(var(--color-tertiary-100));
-}
-
-.ce-block .ce-block--selected .ce-block__content {
-  background: hsl(var(--color-tertiary-700));
-  color: hsl(var(--color-tertiary-100));
-}
-
-.ce-block--selected .ce-block__content {
-  background: hsl(var(--color-tertiary-700));
-  color: hsl(var(--color-tertiary-100));
-  border-radius: 8px;
-}
-
-.cdx-block {
-  padding: 8px;
-  transition: none;
-}
-
-.cdx-block > span {
-  background-color: hsl(var(--color-tertiary-600)) !important;
-}
-
-.cdx-block:focus {
-  outline: 1px solid hsl(var(--color-tertiary-600));
-}
-
-.ce-block__content {
-  width: 100%;
-  max-width: 1024px;
-}
-.ce-toolbar__content {
-  width: 100%;
-  max-width: 1024px;
-}
-
-.ce-toolbar__actions {
-  flex-direction: row;
-  padding-right: 0px;
-}
-
-.ce-toolbar__actions > * {
-  color: hsl(var(--color-tertiary-100));
-  background: hsl(var(--color-tertiary-700));
-  background-color: hsl(var(--color-tertiary-700));
-  border: 1px solid hsl(var(--color-tertiary-400));
-}
-.ce-toolbar__actions .ce-toolbox {
-  color: hsl(var(--color-tertiary-100));
-  background: hsl(var(--color-tertiary-700));
-  background-color: hsl(var(--color-tertiary-700));
-  border: none;
-}
-
-.ce-toolbox {
-  height: 0px;
-}
-
-.ce-toolbar__actions > *:hover {
-  background: none;
-}
-
-.ce-popover {
-  background: #232323;
-}
-
-.cdx-search-field {
-  background: #232323;
-  color: hsl(var(--color-tertiary-100));
-}
-
-.ce-popover__items > div {
-  color: hsl(var(--color-tertiary-100));
-}
-
-.ce-popover__items > div:hover {
-  background: hsl(var(--color-tertiary-600)) !important;
-}
-
-.ce-popover__item-icon {
-  color: hsl(var(--color-tertiary-100));
-  background: none;
-  border: none;
-}
-
-.ce-inline-toolbar {
-  background: #232323;
-  color: hsl(var(--color-tertiary-100));
-  border: 1px solid hsl(var(--color-tertiary-600));
-}
-
-.ce-inline-toolbar__buttons > button {
-  color: hsl(var(--color-tertiary-100));
-}
-
-.ce-inline-toolbar__buttons > button:hover {
-  background: hsl(var(--color-tertiary-600));
-}
-
-.ce-inline-toolbar__actions > input {
-  border-top-width: 0;
-  color: hsl(var(--color-tertiary-100));
-  background-color: hsl(var(--color-tertiary-700));
-}
+/* Text editor styles */
+@import url("./editor.css");
