--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+@improt url("./variables.css");
+
 body {
   overflow-x: hidden;
 }
@@ -18,384 +20,11 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
-:root {
-  /* Colors must be in HSL format */
-  --color-primary-100: 270deg 50% 99%;
-  --color-primary-200: 260deg 39% 95%;
-  --color-primary-300: 261deg 42% 88%;
-  --color-primary-400: 258deg 46% 78%;
-  --color-primary-500: 269deg 53% 68%;
-  --color-primary-600: 259deg 60% 64%;
-  --color-primary-700: 260deg 66% 58%;
-  --color-primary-800: 259deg 72% 52%;
-  --color-primary-900: 259deg 76% 43%;
-
-  --color-secondary-100: 198deg 93% 60%;
-  --color-secondary-200: 198deg 93% 60%;
-  --color-secondary-300: 198deg 93% 60%;
-  --color-secondary-400: 198deg 93% 60%;
-  --color-secondary-500: 198deg 93% 60%;
-  --color-secondary-600: 198deg 93% 60%;
-  --color-secondary-700: 198deg 93% 60%;
-  --color-secondary-800: 198deg 93% 60%;
-  --color-secondary-900: 198deg 93% 60%;
-
-  --color-tertiary-100: 0deg 0% 97%;
-  --color-tertiary-200: 0deg 0% 85%;
-  --color-tertiary-300: 0deg 0% 74%;
-  --color-tertiary-400: 0deg 0% 57%;
-  --color-tertiary-500: 0deg 0% 44%;
-  --color-tertiary-600: 0deg 0% 33%;
-  --color-tertiary-700: 0deg 0% 22%;
-  --color-tertiary-800: 0deg 0% 14%;
-  --color-tertiary-900: 0deg 0% 8%;
-
-  --color-dark-primary-100: 198deg 93% 60%;
-  --color-dark-primary-200: 198deg 93% 60%;
-  --color-dark-primary-300: 198deg 93% 60%;
-  --color-dark-primary-400: 198deg 93% 60%;
-  --color-dark-primary-500: 198deg 93% 60%;
-  --color-dark-primary-600: 198deg 93% 60%;
-  --color-dark-primary-700: 198deg 93% 60%;
-  --color-dark-primary-800: 198deg 93% 60%;
-  --color-dark-primary-900: 198deg 93% 60%;
-
-  --color-dark-secondary-100: 198deg 93% 60%;
-  --color-dark-secondary-200: 198deg 93% 60%;
-  --color-dark-secondary-300: 198deg 93% 60%;
-  --color-dark-secondary-400: 198deg 93% 60%;
-  --color-dark-secondary-500: 198deg 93% 60%;
-  --color-dark-secondary-600: 198deg 93% 60%;
-  --color-dark-secondary-700: 198deg 93% 60%;
-  --color-dark-secondary-800: 198deg 93% 60%;
-  --color-dark-secondary-900: 198deg 93% 60%;
-
-  --color-dark-tertiary-100: 198deg 93% 60%;
-  --color-dark-tertiary-200: 198deg 93% 60%;
-  --color-dark-tertiary-300: 198deg 93% 60%;
-  --color-dark-tertiary-400: 198deg 93% 60%;
-  --color-dark-tertiary-500: 198deg 93% 60%;
-  --color-dark-tertiary-600: 198deg 93% 60%;
-  --color-dark-tertiary-700: 198deg 93% 60%;
-  --color-dark-tertiary-800: 198deg 93% 60%;
-  --color-dark-tertiary-900: 198deg 93% 60%;
-
-  --primary-font: "Roboto", sans-serif;
-
-  --separator-border: #919191; /* same as --color-thertiary-400 */
-  --focus-border: #007fd4;
-  --sash-size: 8px;
-  --sash-hover-size: 4px;
-}
-
-.allotment-module_splitView__L-yRc {
-  height: 100%;
-  overflow: hidden;
-  position: relative;
-  width: 100%;
-}
-
-.allotment-module_splitView__L-yRc > .allotment-module_sashContainer__fzwJF {
-  height: 100%;
-  pointer-events: none;
-  position: absolute;
-  width: 100%;
-}
-
-.allotment-module_splitView__L-yRc
-  > .allotment-module_sashContainer__fzwJF
-  > .allotment-module_sash__QA-2t {
-  pointer-events: auto;
-}
-
-.allotment-module_splitView__L-yRc
-  > .allotment-module_splitViewContainer__rQnVa {
-  height: 100%;
-  position: relative;
-  white-space: nowrap;
-  width: 100%;
-}
-
-.allotment-module_splitView__L-yRc
-  > .allotment-module_splitViewContainer__rQnVa
-  > .allotment-module_splitViewView__MGZ6O {
-  overflow: hidden;
-  position: absolute;
-  white-space: initial;
-}
-
-.allotment-module_splitView__L-yRc.allotment-module_vertical__WSwwa
-  > .allotment-module_splitViewContainer__rQnVa
-  > .allotment-module_splitViewView__MGZ6O {
-  width: 100%;
-}
-
-.allotment-module_splitView__L-yRc.allotment-module_horizontal__7doS8
-  > .allotment-module_splitViewContainer__rQnVa
-  > .allotment-module_splitViewView__MGZ6O {
-  height: 100%;
-}
-
-.allotment-module_splitView__L-yRc.allotment-module_separatorBorder__x-rDS
-  > .allotment-module_splitViewContainer__rQnVa
-  > .allotment-module_splitViewView__MGZ6O:not(:first-child)::before {
-  background-color: var(--separator-border);
-  content: " ";
-  left: 0;
-  pointer-events: none;
-  position: absolute;
-  top: 0;
-  z-index: 5;
-}
-
-.allotment-module_splitView__L-yRc.allotment-module_separatorBorder__x-rDS.allotment-module_vertical__WSwwa
-  > .allotment-module_splitViewContainer__rQnVa
-  > .allotment-module_splitViewView__MGZ6O:not(:first-child)::before {
-  height: 2px;
-  width: 100%;
-}
-
-.allotment-module_splitView__L-yRc.allotment-module_separatorBorder__x-rDS.allotment-module_horizontal__7doS8
-  > .allotment-module_splitViewContainer__rQnVa
-  > .allotment-module_splitViewView__MGZ6O:not(:first-child)::before {
-  height: 100%;
-  width: 2px;
-}
-
-.sash-module_sash__K-9lB {
-  position: absolute;
-  z-index: 35;
-  touch-action: none;
-  pointer-events: auto;
-  text-align: initial;
-}
-
-.sash-module_sash__K-9lB.sash-module_disabled__Hm-wx {
-  pointer-events: none;
-}
-
-.sash-module_sash__K-9lB.sash-module_mac__Jf6OJ.sash-module_vertical__pB-rs {
-  cursor: col-resize;
-}
-
-.sash-module_sash__K-9lB.sash-module_vertical__pB-rs.sash-module_minimum__-UKxp {
-  cursor: e-resize;
-}
-
-.sash-module_sash__K-9lB.sash-module_vertical__pB-rs.sash-module_maximum__TCWxD {
-  cursor: w-resize;
-}
-
-.sash-module_sash__K-9lB.sash-module_mac__Jf6OJ.sash-module_horizontal__kFbiw {
-  cursor: row-resize;
-}
-
-.sash-module_sash__K-9lB.sash-module_horizontal__kFbiw.sash-module_minimum__-UKxp {
-  cursor: s-resize;
-}
-
-.sash-module_sash__K-9lB.sash-module_horizontal__kFbiw.sash-module_maximum__TCWxD {
-  cursor: n-resize;
-}
-
-.sash-module_sash__K-9lB.sash-module_disabled__Hm-wx {
-  cursor: default !important;
-  pointer-events: none !important;
-}
-
-.sash-module_sash__K-9lB.sash-module_vertical__pB-rs {
-  cursor: ew-resize;
-  top: 0;
-  width: var(--sash-size);
-  height: 100%;
-}
-
-.sash-module_sash__K-9lB.sash-module_horizontal__kFbiw {
-  cursor: ns-resize;
-  left: 0;
-  width: 100%;
-  height: var(--sash-size);
-}
-
-.sash-module_sash__K-9lB:not(.sash-module_disabled__Hm-wx)
-  > .sash-module_orthogonal-drag-handle__Yii2- {
-  content: " ";
-  height: calc(var(--sash-size) * 2);
-  width: calc(var(--sash-size) * 2);
-  z-index: 100;
-  display: block;
-  cursor: all-scroll;
-  position: absolute;
-}
-
-.sash-module_sash__K-9lB.sash-module_horizontal__kFbiw.sash-module_orthogonal-edge-north__f7Noe:not(
-    .sash-module_disabled__Hm-wx
-  )
-  > .sash-module_orthogonal-drag-handle__Yii2-.sash-module_start__uZEDk,
-.sash-module_sash__K-9lB.sash-module_horizontal__kFbiw.sash-module_orthogonal-edge-south__6ZrFC:not(
-    .sash-module_disabled__Hm-wx
-  )
-  > .sash-module_orthogonal-drag-handle__Yii2-.sash-module_end__0TP-R {
-  cursor: nwse-resize;
-}
-
-.sash-module_sash__K-9lB.sash-module_horizontal__kFbiw.sash-module_orthogonal-edge-north__f7Noe:not(
-    .sash-module_disabled__Hm-wx
-  )
-  > .sash-module_orthogonal-drag-handle__Yii2-.sash-module_end__0TP-R,
-.sash-module_sash__K-9lB.sash-module_horizontal__kFbiw.sash-module_orthogonal-edge-south__6ZrFC:not(
-    .sash-module_disabled__Hm-wx
-  )
-  > .sash-module_orthogonal-drag-handle__Yii2-.sash-module_start__uZEDk {
-  cursor: nesw-resize;
-}
-
-.sash-module_sash__K-9lB.sash-module_vertical__pB-rs
-  > .sash-module_orthogonal-drag-handle__Yii2-.sash-module_start__uZEDk {
-  left: calc(var(--sash-size) * -0.5);
-  top: calc(var(--sash-size) * -1);
-}
-
-.sash-module_sash__K-9lB.sash-module_vertical__pB-rs
-  > .sash-module_orthogonal-drag-handle__Yii2-.sash-module_end__0TP-R {
-  left: calc(var(--sash-size) * -0.5);
-  bottom: calc(var(--sash-size) * -1);
-}
-
-.sash-module_sash__K-9lB.sash-module_horizontal__kFbiw
-  > .sash-module_orthogonal-drag-handle__Yii2-.sash-module_start__uZEDk {
-  top: calc(var(--sash-size) * -0.5);
-  left: calc(var(--sash-size) * -1);
-}
-
-.sash-module_sash__K-9lB.sash-module_horizontal__kFbiw
-  > .sash-module_orthogonal-drag-handle__Yii2-.sash-module_end__0TP-R {
-  top: calc(var(--sash-size) * -0.5);
-  right: calc(var(--sash-size) * -1);
-}
-
-.sash-module_sash__K-9lB:before {
-  content: "";
-  pointer-events: none;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transition: background-color 0.1s ease-out;
-  background: transparent;
-}
-
-.sash-module_sash__K-9lB.sash-module_vertical__pB-rs:before {
-  width: var(--sash-hover-size);
-  left: calc(50% - (var(--sash-hover-size) / 2));
-}
-
-.sash-module_sash__K-9lB.sash-module_horizontal__kFbiw:before {
-  height: var(--sash-hover-size);
-  top: calc(50% - (var(--sash-hover-size) / 2));
-}
-
-.sash-module_sash__K-9lB.sash-module_hover__80W6I:before,
-.sash-module_sash__K-9lB.sash-module_active__bJspD:before {
-  background: var(--focus-border);
-}
-
 /*------------------------------------*/
 
-.AccordionTrigger[data-state="open"] .icon {
-  transform: rotate(180deg);
-}
-
-.AccordionContent[data-state="open"] {
-  animation: slideDown 300ms cubic-bezier(0.87, 0, 0.13, 1) forwards;
-}
-
-.AccordionContent[data-state="closed"] {
-  animation: slideUp 300ms cubic-bezier(0.87, 0, 0.13, 1) forwards;
-}
-
-@keyframes slideDown {
-  from {
-    height: 0;
-  }
-  to {
-    height: var(--radix-accordion-content-height);
-  }
-}
-
-@keyframes slideUp {
-  from {
-    height: var(--radix-accordion-content-height);
-  }
-  to {
-    height: 0;
-  }
-}
-
-.DialogOverlay {
-  animation: overlayShow 300ms cubic-bezier(0.16, 1, 0.3, 1) forwards;
-}
-
-.DialogContent {
-  animation: contentShow 300ms cubic-bezier(0.16, 1, 0.3, 1);
-}
-
-@keyframes overlayShow {
-  from {
-    opacity: 0;
-    backdrop-filter: blur(0);
-    background-color: rgba(0, 0, 0, 0);
-  }
-  to {
-    opacity: 1;
-    backdrop-filter: blur(50px);
-    background-color: rgba(0, 0, 0, 0.7);
-  }
-}
-
-@keyframes contentShow {
-  from {
-    opacity: 0;
-    transform: translate(-50%, -48%) scale(0.96);
-    filter: blur(20px);
-  }
-  to {
-    opacity: 1;
-    filter: blur(0);
-    transform: translate(-50%, -50%) scale(1);
-  }
-}
-
-@keyframes toastSlideIn {
-  from {
-    transform: translateY(-100%);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-@keyframes toastSlideOut {
-  from {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  to {
-    transform: translateY(-100%);
-    opacity: 0;
-  }
-}
-
-.toast-enter {
-  animation: toastSlideIn 0.3s ease-in-out forwards;
-}
-
-.toast-leave {
-  animation: toastSlideOut 0.3s ease-in-out forwards;
-}
-
+@import url("./accordion.css");
+@import url("./dialog.css");
+@import url("./toast.css");
+@import url("./allotment.css");
 @import url("./scrollbar.css");
-
-/* Text editor styles */
 @import url("./editor.css");
