--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -41,6 +41,8 @@
     #652ddd
   );
 
+  --noise2: url("/noise2.svg");
+
   --primary-font: "Roboto", sans-serif;
 
   --separator-border: #919191; /* same as --color-thertiary-400 */
