--- a/src/styles/rainbowDiv.css
+++ b/src/styles/rainbowDiv.css
@@ -1,10 +1,15 @@
 .rainbowDiv > div {
-  background-image: var(--rainbow-gradient);
+  background-image: linear-gradient(
+    90deg,
+    rgba(250, 250, 250, 0.2),
+    rgba(230, 230, 230, 0.2)
+  );
   background-size: 200% 100%;
 }
 
 .rainbowDiv:hover > div {
   animation: rainbowTranslate 3s linear infinite;
+  background-image: var(--rainbow-gradient);
 }
 
 .rainbowDiv:hover::after {
