--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -31,3 +31,29 @@
     transform: translate(-50%, -50%) scale(1);
   }
 }
+
+@keyframes dialog-show-content {
+  from {
+    opacity: 0;
+    transform: scale(0.96);
+    filter: blur(16px);
+  }
+  to {
+    opacity: 1;
+    filter: blur(0);
+    transform: scale(1);
+  }
+}
+
+@keyframes dialog-hide-content {
+  from {
+    opacity: 1;
+    filter: blur(0);
+    transform: scale(1);
+  }
+  to {
+    opacity: 0;
+    transform: scale(0.96);
+    filter: blur(16px);
+  }
+}
