--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,3 +79,4 @@ input[type="number"] {
 @import url("./toast.css");
 @import url("./allotment.css");
 @import url("./scrollbar.css");
+@import url("./multiRangeSlider.css");
